src/snapshots/tests__thf_atomic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Plain(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
)
