src/snapshots/tests__thf_binary_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Type(
    Mapping(
        ThfMappingType(
            [
                ThfUnitaryType(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "c",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                ThfUnitaryType(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "d",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
