src/snapshots/tests__thf_defined_atomic.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    DefinedConstant(
        DefinedFunctor(
            AtomicDefinedWord(
                DollarWord(
                    LowerWord(
                        "defined_constant",
                    ),
                ),
            ),
        ),
    ),
)
