src/snapshots/tests__thf_defined_infix.snap
---
source: src/tests.rs
expression: parsed
---
ThfDefinedInfix {
    left: Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: DefinedInfixPred(
        InfixEquality,
    ),
    right: Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "d",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
