src/snapshots/tests__thf_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
AtomTyping(
    Typing(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            ThfUnitaryType(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "t",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
