src/snapshots/tests__thf_formula.snap
---
source: src/tests.rs
expression: parsed
---
Logic(
    Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
