src/snapshots/tests__thf_infix_unary.snap
---
source: src/tests.rs
expression: parsed
---
ThfInfixUnary {
    left: Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: InfixInequality,
    right: Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "d",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
