src/snapshots/tests__thf_logic_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
DefinedInfix(
    ThfDefinedInfix {
        left: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "d",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
