src/snapshots/tests__thf_logic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Assoc(
        Or(
            ThfOrFormula(
                [
                    Unitary(
                        Atomic(
                            Plain(
                                Constant(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "c",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                Constant(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "d",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
